syntax = "proto3";

import "Figure/FigureConfigurationData.proto";

message SetUserFigureConfigurationData {
    FigureConfigurationData figure_configuration = 1;
}
